--- a/src/components/client/stack/style.scss
+++ b/src/components/client/stack/style.scss
@@ -2,9 +2,11 @@
   width: 100%;
   height: 1500px;
   background-color: #f3f2f7;
-  .header-task-title {
+  .header-task-item {
     padding: 20px;
     .nav-list {
+      animation: slideIn 0.6s ease-out;
+
       height: 50px;
       justify-content: space-between;
       margin-top: 5px;
@@ -19,6 +21,15 @@
         to {
           opacity: 1;
           transform: translateY(0);
+        }
+      }
+      .item-title {
+        animation: slideIn 0.6s ease-out;
+        width: 20%;
+        h2 {
+          font-size: 26px;
+          font-weight: 700;
+          color: #7a8699;
         }
       }
       .from-boards-list {
@@ -196,14 +207,14 @@
       }
       .from-search {
         width: 200px;
-        height: 40px;
+        height: 50px;
         justify-content: center;
         align-items: center;
         background-color: #ffff;
         border: 2px solid #e7e7e7;
         border-radius: 10px;
         display: flex;
-        padding: 2px 13px;
+        padding: 0px 13px;
         animation: slideDown 0.6s ease-out;
         .from-nav-search {
           display: flex;
@@ -255,258 +266,90 @@
           justify-content: center;
         }
       }
-    }
-    .BacklogTasks {
-      height: 50px;
-      display: flex;
-      justify-content: space-between;
-      margin-top: 50px;
-      .from-backlogTasks {
-        width: 200px;
-        display: flex;
-        align-items: center;
-        .text-backlog {
-          font-size: 25px;
-          font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-          font-weight: 800;
-          margin-right: 24px;
-        }
-        .item-backlog {
-          width: 30px;
-          height: 30px;
-          display: flex;
-          align-items: center;
-          background-color: rgb(240, 236, 224);
-          justify-content: center;
-          border-radius: 50%;
-          color: #ca8a04;
-          font-weight: 600;
-        }
-      }
-      .MoreHoriz-icon {
+
+      .from-members {
+        animation: slideIn 0.6s ease-out;
+        width: 180px;
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 50px;
-        .icon-item {
+        .item-member {
+          position: relative;
+          width: 76px;
+          top: 0px;
+          .img-avt-one {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            position: absolute;
+            left: 0;
+            z-index: 2;
+          }
+          .img-avt-true {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            position: absolute;
+            left: 18px; /* Đẩy qua một nửa */
+            z-index: 3; /* Hình thứ hai */
+          }
+          .add-member {
+            width: 35px;
+            align-items: center;
+            text-align: center;
+            background-color: #f2f4f7;
+            justify-content: center;
+            height: 35px;
+            display: flex;
+            border-radius: 50%;
+            position: absolute;
+            left: 36px; /* Đẩy qua một nửa */
+            z-index: 4; /* Hình thứ hai */
+          }
+        }
+        .item-add {
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border: 1px dashed black;
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          background-color: #b8bfcc;
+          .icon-add {
+            color: #7a8699;
+          }
+          &:hover {
+            background-color: #b8bfcc;
+          }
+        }
+      }
+    }
+    .from-task {
+      margin-top: 20px;
+      width: 100%;
+      height: 500px;
+      background-color: #fff;
+      border: 1px Dashed #7a8699;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .item-err {
+        .icon-err {
+          font-size: 80px;
+          color: #7a8699;
+        }
+        .txt-err {
+          text-align: center;
+          font-weight: 600;
           color: #7a8699;
         }
       }
     }
-    .from-item-boards {
-      display: grid;
-      grid-template-columns: repeat(4, 0.5fr);
-      align-items: center;
-      justify-items: center;
-      height: 240px;
-      width: 100%;
-      gap: 20px;
-      .item-boards {
-        cursor: pointer;
-        padding: 10px 13px;
-        width: 250px;
-        height: 240px;
-        background-color: #fff;
-        border-radius: 10px;
-        border: 1px solid transparent;
-        transition: all 0.25s ease;
-
-        &:hover {
-          border: 1px solid #4cd7f6;
-          box-shadow: 0 4px 15px rgba(76, 215, 246, 0.3);
-          transform: translateY(-3px);
-        }
-        .from-text-page {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          .txt-page {
-            font-weight: 600;
-            color: #7a8699;
-            font-size: 13px;
-          }
-          .item-save {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            .icon-save {
-              color: #4cd7f6;
-              margin-right: 5px;
-            }
-            .item-number {
-              font-weight: 600;
-              color: #4cd7f6;
-              font-size: 13px;
-            }
-          }
-        }
-
-        .from-energy {
-          display: flex;
-          margin-top: 20px;
-          justify-content: space-between;
-          .item-progress {
-            font-weight: 600;
-            color: #7a8699;
-            font-size: 13px;
-          }
-        }
-        .progress-container {
-          width: 100%;
-          background-color: #e0e0e0;
-          border-radius: 50px;
-          overflow: hidden;
-        }
-
-        .custom-progress .MuiLinearProgress-bar {
-          background-color: #6366f1 !important; /* Màu tím xanh */
-          border-radius: 50px;
-          height: 100%;
-        }
-        .from-mission {
-          display: flex;
-          margin-top: 30px;
-          .item-btn {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 10px;
-            height: 30px;
-            width: 70px;
-            background-color: rgb(230, 242, 255);
-            color: #007aff;
-            font-weight: 600;
-            border-radius: 30px;
-          }
-        }
-        .from-member {
-          height: 40px;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          margin-top: 20px;
-          .from-members {
-            display: flex;
-            justify-content: center;
-            justify-content: center;
-            .item-member {
-              position: relative;
-              width: 76px;
-              top: 0px;
-
-              .img-avt-one {
-                width: 35px;
-                height: 35px;
-                border-radius: 50%;
-                position: absolute;
-                left: 0;
-                z-index: 2;
-              }
-              .img-avt-true {
-                width: 35px;
-                height: 35px;
-                border-radius: 50%;
-                position: absolute;
-                left: 18px; /* Đẩy qua một nửa */
-                z-index: 3; /* Hình thứ hai */
-              }
-              .add-member {
-                width: 35px;
-                align-items: center;
-                text-align: center;
-                background-color: #f2f4f7;
-                justify-content: center;
-                height: 35px;
-                display: flex;
-                border-radius: 50%;
-                position: absolute;
-                left: 36px; /* Đẩy qua một nửa */
-                z-index: 4; /* Hình thứ hai */
-              }
-            }
-          }
-          .item-add {
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border: 1px dashed black;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            background-color: #b8bfcc;
-            .icon-add {
-              color: #7a8699;
-            }
-            &:hover {
-              background-color: #b8bfcc;
-            }
-          }
-          .from-icon {
-            height: 40px;
-            display: flex;
-            align-items: center;
-            .from-mess {
-              display: flex;
-              .icon-cart {
-                margin-right: 5px;
-                color: #a855f7;
-              }
-              .item-number-cart {
-                color: #6366f1;
-              }
-            }
-            .from-mess {
-              display: flex;
-              margin-left: 10px;
-              .icon-mess {
-                margin-right: 5px;
-                color: #f59e0b;
-              }
-              .item-number-mess {
-                color: #f59e0b;
-              }
-            }
-          }
-        }
-      }
-    }
-    .from-chart {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: 40px;
-      width: 350px;
-      height: 250px;
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-    }
-    .from-item-chart {
-      display: flex;
-      .item-chart {
-        .from-charts {
-          margin-top: 20px;
-          background-color: white; /* Nền trắng */
-          border-radius: 10px; /* Bo góc */
-          box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 350px; /* Đảm bảo chứa vừa biểu đồ */
-          height: 250px;
-        }
-      }
-      .from-chart-boards {
-        border-radius: 10px;
-        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-        margin-top: 40px;
-        width: 100%;
-        margin-left: 20px;
-        height: 520px;
-        background-color: #fff;
-      }
+    .modal-stack {
+      text-align: center;
     }
   }
 }
