--- a/src/components/client/stack/style.scss
+++ b/src/components/client/stack/style.scss
@@ -25,7 +25,7 @@
       }
       .item-title {
         animation: slideIn 0.6s ease-out;
-        width: 20%;
+        width: 15%;
         h2 {
           font-size: 26px;
           font-weight: 700;
@@ -39,7 +39,7 @@
         background-color: #ffff;
         border-radius: 10px;
         width: 245px;
-        height: 50px;
+        height: 48px;
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         perspective: 500px;
@@ -302,6 +302,18 @@
             background-color: #b8bfcc;
           }
         }
+      }
+      .btn-add {
+        outline: none;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        color: #7a8699;
+        border: 1px solid #e7e7e7;
+        border-radius: 6px;
+        cursor: pointer;
+        transition: background-color 0.2s;
       }
     }
     .from-task {
